--- a/application/pom.xml
+++ b/application/pom.xml
@@ -38,6 +38,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.ehrbase</groupId>
+            <artifactId>xacml-authorization</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.ops4j.pax.logging</groupId>
+                    <artifactId>pax-logging-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
