--- a/application/pom.xml
+++ b/application/pom.xml
@@ -38,15 +38,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.ehrbase</groupId>
-            <artifactId>xacml-authorization</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <groupId>ag.vitagroup.hip.cdr.authorization</groupId>
+            <artifactId>cdr-xacml-authorization-lib</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+<!--            
             <exclusions>
                 <exclusion>
                     <groupId>org.ops4j.pax.logging</groupId>
                     <artifactId>pax-logging-api</artifactId>
                 </exclusion>
             </exclusions>
+-->            
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
