--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -16,6 +16,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+        <groupId>org.ehrbase</groupId>
+        <artifactId>ehrbase-custom-xacml-authorization</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+        <scope>provided</scope>
+    </dependency>
+      
     <dependency>
       <groupId>com.nedap.healthcare.archie</groupId>
       <artifactId>openehr-rm</artifactId>
