--- a/rest-ehr-scape/pom.xml
+++ b/rest-ehr-scape/pom.xml
@@ -38,6 +38,14 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.ehrbase</groupId>
+            <artifactId>ehrbase-custom-xacml-authorization</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
