--- a/application/src/main/resources/application-local.yml
+++ b/application/src/main/resources/application-local.yml
@@ -15,13 +15,13 @@
 # limitations under the License.
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ehrbase
-    username: ehrbase_restricted
-    password: ehrbase_restricted
+    url: jdbc:postgresql://c-cosmosdb.ofqt4ngm4dbcuv.postgres.cosmos.azure.com:5432/citus
+    username: citus
+    password: GFG7Q4204P0HM35A$
   flyway:
     schemas: ehr
-    user: ehrbase
-    password: ehrbase
+    user: citus
+    password: GFG7Q4204P0HM35A$
 
     tomcat:
       maxIdle: 10
