--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- PostgreSQL Database Properties -->
-        <database.host>localhost</database.host>
+        <database.host>ehrbase-sandbox-server.postgres.database.azure.com</database.host>
         <database.port>5432</database.port>
-        <database.user>ehrbase</database.user>
-        <database.pass>ehrbase</database.pass>
-        <database.name>ehrbase</database.name>
+        <database.user>hpbqolohla</database.user>
+        <database.pass>UKWT0Q0W2QL1G3X5$</database.pass>
+        <database.name>postgres</database.name>
         <test.profile>unit</test.profile>
     </properties>
 
